--- a/.github/workflows/updatepublication.yml
+++ b/.github/workflows/updatepublication.yml
@@ -47,6 +47,6 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add publication.html
+          git add publication.html aimslab.html
           git commit -m "Auto-update publications from Google Scholar [$(date +'%Y-%m-%d %H:%M:%S')]"
           git push
